--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,6 +48,14 @@ material = "1.12.0"
 activity = "1.9.2"
 constraintlayout = "2.1.4"
 
+naver-map-sdk = "3.19.0"
+play-services-location = "21.0.0"
+play-services-maps = "18.2.0"
+lottie = "5.0.2"
+circle-imageview = "3.1.0"
+#simpleratingbar = "0.1.5"
+youtubeplayer = "12.1.0"
+
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -89,7 +97,7 @@ hilt-plugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin"
 hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 hilt-testing-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 
-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-kotlin-serialization-converter = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "kotlin-serialization-converter" }
 
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp" }
@@ -97,6 +105,14 @@ okhttp = { module = "com.squareup.okhttp3:okhttp" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
 
 javax-inject = { group = "javax.inject", name = "javax.inject", version.ref = "javax-inject" }
+
+naver-map-sdk = { group = "com.naver.maps", name = "map-sdk", version.ref = "naver-map-sdk" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play-services-location" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "play-services-maps" }
+lottie = {group = "com.airbnb.android", name = "lottie", version.ref = "lottie"}
+circle-imageview = { group = "de.hdodenhof", name = "circleimageview", version.ref = "circle-imageview" }
+#simpleratingbar = {group="com.iarcuschin", name = "simpleratingbar", version.ref="simpleratingbar"}
+youtubeplayer = { group = "com.pierfrancescosoffritti.androidyoutubeplayer", name = "core", version.ref = "youtubeplayer" }
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
@@ -111,4 +127,4 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 
 [bundles]
 lifecycle = ["lifecycle", "lifecycle-viewmodel","lifecycle-livedata"]
-retrofit = ["retrofit", "retrofit-kotlin-serialization-converter"]
+retrofit = ["retrofit-core", "retrofit-kotlin-serialization-converter"]
