--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kotlin-datetime = "0.4.0"
 kotlin-collections = "0.3.7"
 ktlint = "12.0.3"
 ksp = "1.9.10-1.0.13"
+coil = "2.4.0"
 
 # Firebase
 google-services = "4.4.2"
@@ -89,6 +90,7 @@ android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref
 kotlin = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 kotlin-gradleplugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 ksp-gradle-plugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 
 # hilt
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
