--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Base.Theme.TastyLog"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name="com.knu.onboarding.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <data
+                    android:host="send"
+                    android:scheme="kakaolink" />
             </intent-filter>
         </activity>
 
-        <activity android:name="com.knu.home.MainActivity"
-            android:exported="false"/>
+        <activity
+            android:name="com.knu.home.MainActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="${naverMapClientId}" />
-
     </application>
 
 </manifest>
